tests/type_checker/pass/gradual-base-01.core
module 'gradual-base-01' ['foo'/1,
			  'module_info'/0,
			  'module_info'/1]
    attributes [%% Line 1
		'file' =
		    %% Line 1
		    [{[116|[101|[115|[116|[115|[47|[116|[121|[112|[101|[95|[99|[104|[101|[99|[107|[101|[114|[47|[112|[97|[115|[115|[47|[103|[114|[97|[100|[117|[97|[108|[45|[98|[97|[115|[101|[45|[48|[49|[46|[101|[114|[108]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]],1}],
		%% Line 7
		'type' =
		    %% Line 7
		    [{'new',{'type',{7,16},'tuple',[]},[]}],
		%% Line 8
		'type' =
		    %% Line 8
		    [{'consume',{'type',{8,20},'tuple',[]},[]}],
		%% Line 10
		'session' =
		    %% Line 10
		    [39|[102|[111|[111|[39|[40|[95|[41]]]]]]]],
		%% Line 12
		'spec' =
		    %% Line 12
		    [{{'foo',1},[{'type',{12,10},'fun',[{'type',{12,10},'product',[{'type',{12,11},'dynamic',[]}]}|[{'type',{12,25},'integer',[]}]]}]}]]
'foo'/1 =
    %% Line 13
    ( fun (_0) ->
	  ( _0
	    -| [{'function',{'foo',1}}] )
      -| [{'function',{'foo',1}}] )
'module_info'/0 =
    ( fun () ->
	  call 'erlang':'get_module_info'
	      ('gradual-base-01')
      -| [{'function',{'module_info',0}}] )
'module_info'/1 =
    ( fun (_0) ->
	  call 'erlang':'get_module_info'
	      ('gradual-base-01', ( _0
				    -| [{'function',{'module_info',1}}] ))
      -| [{'function',{'module_info',1}}] )
end