tests/type_checker/fail/server.core
module 'server' ['module_info'/0,
		 'module_info'/1]
    attributes [%% Line 1
		'file' =
		    %% Line 1
		    [{[116|[101|[115|[116|[115|[47|[116|[121|[112|[101|[95|[99|[104|[101|[99|[107|[101|[114|[47|[102|[97|[105|[108|[47|[115|[101|[114|[118|[101|[114|[46|[101|[114|[108]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]],1}],
		%% Line 4
		'mspec' =
		    %% Line 4
		    [63|[39|[110|[101|[103|[39|[46|[32|[33|[39|[114|[101|[97|[100|[121|[39|[46|[32|[63|[105|[110|[116|[101|[103|[101|[114|[46|[32|[33|[105|[110|[116|[101|[103|[101|[114]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]
'module_info'/0 =
    ( fun () ->
	  call 'erlang':'get_module_info'
	      ('server')
      -| [{'function',{'module_info',0}}] )
'module_info'/1 =
    ( fun (_0) ->
	  call 'erlang':'get_module_info'
	      ('server', ( _0
			   -| [{'function',{'module_info',1}}] ))
      -| [{'function',{'module_info',1}}] )
end